runtime_sources = [
    'src/VectorLab.h',
    'src/Core/Base.h',
    'src/Core/Types.h',
    'src/Core/EntryPoint.h',
    'src/Core/Application.h', 'src/Core/Application.cpp',
    'src/Core/Log.h', 'src/Core/Log.cpp',
    'src/Core/Window.h', 'src/Core/Window.cpp'
]

lib_vl = static_library('vectorlab', runtime_sources, install : false)